<resources>
    <string name="demo_qes">Hello! How are you?</string>
    <string name="app_name">Tense</string>
    <string name="title">TITLE</string>
    <string name="secondary_text">SECONDARY TEXT</string>
    <string name="supporting_text">SUPPORTING TEXT</string>
    <string name="past">PAST TENSE</string>
    <string name="present">PRESENT TENSE</string>
    <string name="future">FUTURE TENSE</string>
    <string name="practice">PRACTICE</string>
    <string name="action_1">ACTION 1</string>
    <string name="action_2">ACTION 2</string>
    <string name="pastsimple">SIMPLE PAST TENSE</string>
    <string name="pastperfect">PAST PERFECT TENSE</string>
    <string name="pastcontinuous">PAST CONTINUOUS TENSE</string>
    <string name="pastperfectcontinuous">PAST PERFECT CONTINUOUS TENSE</string>
    <string name="presentsimple">SIMPLE PRESENT TENSE</string>
    <string name="presentperfect">PRESENT PERFECT TENSE</string>
    <string name="presentcontinuous">PRESENT CONTINUOUS TENSE</string>
    <string name="presentperfectcontinuous">PRESENT PERFECT CONTINUOUS TENSE</string>
    <string name="futureperfectcontinuous">FUTURE PERFECT CONTINUOUS TENSE</string>
    <string name="futurecontinuous">FUTURE CONTINUOUS TENSE</string>
    <string name="futureperfect">FUTURE PERFECT TENSE</string>
    <string name="futuresimple">SIMPLE FUTURE TENSE</string>
    <string name="pastsimpledesc">To indicate a past habit - or an action already completed. Can be used with or without adverbs of time</string>
    <string name="formulae"><b>FORMULAE: </b></string>
    <string name="example"><b>EXAMPLE:-</b></string>
    <string name="pastsimpleformulae">S          +          V2          +          O</string>
    <string name="pastsimpleexample1"><i> ~ I <b>ate</b> pizza yesterday.</i></string>
    <string name="pastsimpleexample2"><i> ~ <b>Did</b> you have dinner last night?</i></string>
    <string name="pastsimpleexample3"><i> ~ I <b>did not</b> see a play yesterday.</i></string>
    <string name="bottomtext">S = Subject | O = Object | V = Verb (V1 = present / v2 = past / v3 = past participle)</string>
    <string-array name="optionarray">

        <item>SIMPLE PAST TENSE</item>
        <item>PAST PERFECT TENSE</item>
        <item>PAST CONTINUOUS TENSE</item>
        <item>PAST PERFECT CONTINUOUS TENSE</item>

        <item>SIMPLE PRESENT TENSE</item>
        <item>PRESENT PERFECT TENSE</item>
        <item>PRESENT CONTINUOUS TENSE</item>
        <item>PRESENT PERFECT CONTINUOUS TENSE</item>

        <item>SIMPLE FUTURE  TENSE</item>
        <item>FUTURE PERFECT CONTINUOUS TENSE</item>
        <item>FUTURE CONTINUOUS TENSE</item>
        <item>FUTURE PERFECT TENSE</item>


    </string-array>
    <string-array name="pastsimpledetailsstrarr">

        <item>PAST SIMPLE TENSE</item>
        <item>To indicate a past habit - or an action already completed. Can be used with or without adverbs of time.</item>
        <item>FORMULAE</item>
        <item>S + V2 + O</item>
        <item>EXAMPLE</item>

        <item><i> ~ I <b>ate</b> pizza yesterday.</i></item>
        <item><i> ~ <b>Did</b> you have dinner last night?</i></item>
        <item><i> ~ I <b>did not</b> see a play yesterday.</i></item>
    </string-array>
    <string-array name="pastcontinuousarr">

        <item>PAST CONTINUOUS TENSE</item>
        <item>To indicate uncompleted action of the past (with/without time reference). To Indicate persistent habits of the pas(with always, continuously, forever etc.)</item>
        <item>FORMULAE</item>
        <item>S + was/were + V(ing) + O</item>
        <item>EXAMPLE</item>

        <item><i> ~ I <b>was eating</b> pizza when you arrived.</i></item>
        <item><i> ~ They <b>were meeting</b> secretly after school.</i></item>
        <item><i> ~ The children <b>were growing</b> up quickly.</i></item>

    </string-array>
    <string-array name="pastperfectarr">

        <item>PAST PERFECT TENSE</item>
        <item>To indicate a complete action of the past that happened before another event took place.</item>
        <item>FORMULAE</item>
        <item>S + had + V3 + O</item>
        <item>EXAMPLE</item>

        <item><i> ~ I <b>had eaten</b> all of the pizza when you arrived.</i></item>
        <item><i> ~ The plane <b>had left</b> by the time I got to the airport.</i></item>
        <item><i> ~ Kate <b>had wanted</b> to see the movie, but she did not have money for the ticket.</i></item>

    </string-array>
    <string-array name="pastperfectcontinuousarr">

        <item>PAST PERFECT CONTINUOUS TENSE</item>
        <item>To indicate an action in the past that began before a certain point in the past and continued up until that time.</item>
        <item>FORMULAE</item>
        <item>S + had been+ V(ing) + O</item>
        <item>EXAMPLE</item>

        <item><i> ~ I <b>had been eating</b>  pizza for 2 hours when you arrived.</i></item>
        <item><i> ~ The program that was terminated <b>had been working</b> well since 1945.</i></item>
        <item><i> ~ Martha <b>had been walking</b> three miles a day before she broke her leg.</i></item>

    </string-array>
    <string-array name="simplepresenttensearr">

        <item>SIMPLE PRESENT TENSE</item>
        <item>To indicate habits or general truth. To indicate a future event on a designated date as part of a plan or arrangement. With mental action verbs like, love, want, need, believe,etc </item>
        <item>FORMULAE</item>
        <item>S + V1 + O</item>
        <item>EXAMPLE</item>

        <item><i> ~ I <b>eat</b>  pizza everyday.</i></item>
        <item><i> ~ she <b>works</b> in london.</i></item>
        <item><i> ~ Do you <b>play</b> the piano.</i></item>

    </string-array>
    <string-array name="presentcontinuoustensearr">

        <item>PRESENT CONTINUOUS TENSE</item>
        <item>To indicate action going on at the time of speaking. To indicate temporary action which may not be happening at the time of speaking.</item>
        <item>FORMULAE</item>
        <item>S + is/am/are + V(+ing) + O</item>
        <item>EXAMPLE</item>

        <item><i> ~ He <b>is talking</b>  to his friend.</i></item>
        <item><i> ~ We <b>are visiting</b> the museum in the afternoon.</i></item>
        <item><i> ~ <b>Is the baby drinking</b> his bottle?</i></item>

    </string-array>
    <string-array name="presenperfecttensearr">

        <item>PRESENT PERFECT TENSE</item>
        <item>To indicate past action which is not defined by a time of occurrence. To Indicate an action which started in the past and has continued up until now.</item>
        <item>FORMULAE</item>
        <item>S + have/has + V3 + O</item>
        <item>EXAMPLE</item>

        <item><i> ~ I <b>have eaten</b>  all of the pizza.</i></item>
        <item><i> ~ We <b>have not seen</b> her today.</i></item>
        <item><i> ~ <b>He has finished</b> his homework..</i></item>

    </string-array>
    <string-array name="presenperfectcontinuoustensearr">

        <item>PRESENT PERFECT CONTINUOUS TENSE</item>
        <item>To indicate an action which started at some point in the past and may or may not be complete.</item>
        <item>FORMULAE</item>
        <item>S + have/has been + V(+ing) + O</item>
        <item>EXAMPLE</item>

        <item><i> ~ I <b>have been eating</b> pizza for 2 hours.</i></item>
        <item><i> ~ She <b>has been waiting</b> for you all day.</i></item>
        <item><i> ~ where <b>have you been running</b>?</i></item>

    </string-array>
    <string-array name="simplefuturetensearr">

        <item>SIMPLE FUTURE TENSE</item>
        <item>To indicate an action, condition, or circumstance which has not taken place yet.</item>
        <item>FORMULAE</item>
        <item>S + will + V + O</item>
        <item>EXAMPLE</item>

        <item><i> ~ I <b>will eat</b> pizza tomorrow.</i></item>
        <item><i> ~ He <b>will carry</b> your bag for you.</i></item>
        <item><i> ~ <b>Will you come</b> to the dance with me?</i></item>

    </string-array>
    <string-array name="futurecontinuoustensearr">

        <item>FUTURE CONTINUOUS TENSE</item>
        <item>To indicate what will be going on at some time in the future. To indicate planned future events.</item>
        <item>FORMULAE</item>
        <item>S + will be + V(+ing) + O</item>
        <item>EXAMPLE</item>

        <item><i> ~ I <b>will be eating</b> pizza when you arrive.</i></item>
        <item><i> ~ We <b>will be shopping</b> in that market this Monday.</i></item>
        <item><i> ~ <b>Will it be raining</b> at this time tomorrow?</i></item>

    </string-array>
    <string-array name="futureperfecttensearr">

        <item>FUTURE PERFECT TENSE</item>
        <item>To indicate what will be going on at some time in the future. To indicate planned future events.</item>
        <item>FORMULAE</item>
        <item>S + will have + V3 + O</item>
        <item>EXAMPLE</item>

        <item><i> ~ I <b>will have eaten</b> all of the pizza bt the time you arrive.</i></item>
        <item><i> ~ They <b>will have had</b> their dinner by then.</i></item>
        <item><i> ~ <b>Will you have ploughed</b> your field by monday?</i></item>

    </string-array>
    <string-array name="futureperfectcontinuoustensearr">

        <item>FUTURE PERFECT CONTINUOUS TENSE</item>
        <item>To indicate an action that will have happened for some time and will not be complete yet at a certain point in the future.</item>
        <item>FORMULAE</item>
        <item>S + will have been + V(+ing) + O</item>
        <item>EXAMPLE</item>

        <item><i> ~ I <b>will have been eating</b> pizza for 2 hours when you arrive.</i></item>
        <item><i> ~ We <b>will have been shopping</b> in that market before you come home.</i></item>
        <item><i> ~ <b>Will you have been waiting</b> for more than two hours when her plane finally arrives?</i></item>

    </string-array>
</resources>