<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/clayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardmv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/red">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadeScrollbars="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textviewHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/pastsimple"
                    android:textColor="@color/white"
                    android:textSize="35dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textviewdescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingTop="15dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/pastsimpledesc"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/formulae"
                    android:textColor="@color/white"
                    android:textSize="23dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textviewformulaeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="monospace"
                    android:paddingTop="15dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/pastsimpleformulae"
                    android:textColor="@color/white"
                    android:textSize="15dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif-monospace"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/example"
                    android:textColor="@color/white"
                    android:textSize="23dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/exampletext1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="5dp"
                    android:text="@string/pastsimpleexample1"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/exampletext2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="5dp"
                    android:text="@string/pastsimpleexample2"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/exampletext3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="5dp"
                    android:text="@string/pastsimpleexample3"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/bottomtext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="60dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/bottomtext"
                    android:textColor="@color/black"
                    android:textSize="14dp" />


            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabuttonnext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"
            android:background="@color/white"

            android:src="@drawable/rightarrow" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabuttonprev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@color/white"
            android:src="@drawable/previous" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabuttonpractice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:layout_gravity="center_horizontal |bottom"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"

            android:background="@color/white"
            android:src="@drawable/puzzle" />
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>