<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadeScrollbars="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card1"
                android:layout_width="430dp"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:layout_margin="5px"
                android:animateLayoutChanges="true"
                android:backgroundTint="@color/skyblue"
                android:clickable="true"
                android:fadeScrollbars="true"
                android:rotationX="1"
                android:rotationY="3">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvm1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:rotationX="1"
                    android:text="@string/futuresimple"
                    android:textColor="@color/white"
                    android:textSize="50dp"></com.google.android.material.textview.MaterialTextView>

            </com.google.android.material.card.MaterialCardView>
            <!--future perfect-->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card2"
                android:layout_width="430dp"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:layout_marginRight="5px"
                android:animateLayoutChanges="true"
                android:backgroundTint="@color/purple_700"
                android:clickable="true"
                android:fadeScrollbars="true"
                android:rotationX="1"
                android:rotationY="3">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvm2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:rotationX="1"
                    android:text="@string/futureperfect"
                    android:textColor="@color/white"
                    android:textSize="50dp"></com.google.android.material.textview.MaterialTextView>

            </com.google.android.material.card.MaterialCardView>

            <!--future Continuous-->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card3"
                android:layout_width="430dp"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:layout_marginRight="5px"
                android:animateLayoutChanges="true"
                android:backgroundTint="@color/teal_700"
                android:clickable="true"
                android:fadeScrollbars="true"
                android:rotationX="1"
                android:rotationY="3">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvm3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:rotationX="1"
                    android:text="@string/futurecontinuous"
                    android:textColor="@color/white"
                    android:textSize="50dp"></com.google.android.material.textview.MaterialTextView>

            </com.google.android.material.card.MaterialCardView>
            <!--future Perfect Continuous-->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card4"
                android:layout_width="430dp"
                android:layout_height="400dp"
                android:layout_gravity="center"
                android:layout_marginRight="5px"
                android:animateLayoutChanges="true"
                android:backgroundTint="@color/green"
                android:clickable="true"
                android:fadeScrollbars="true"
                android:rotationX="1"
                android:rotationY="3">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvm4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:rotationX="1"
                    android:text="@string/futureperfectcontinuous"
                    android:textColor="@color/white"
                    android:textSize="50dp"></com.google.android.material.textview.MaterialTextView>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>